<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/sample_content_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@id/button_favorites"
        />

    <Button
        android:id="@+id/button_favorites"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:text="@string/favorites"
        android:onClick="goToFavorites"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>